--- a/doc/configure_and_run.org
+++ b/doc/configure_and_run.org
@@ -62,7 +62,7 @@
 * a workflow proposal           
 
 - create a new configuration by copying and renaming an existing one 
-- do it to both the context and non-context tables
+- do it for both the context and non-context tables
 - dont forget to create aliases for both new groups and name them consistently 
 - start doing what you need
 
