--- a/doc/mu2e_build_instructions.org
+++ b/doc/mu2e_build_instructions.org
@@ -4,7 +4,9 @@
    - version   : v2_06_08   
    - qualifiers: e20_s118_prof
 
-  the build procedure itself:
+  - all available OTSDAQ bundles: https://scisoft.fnal.gov/scisoft/packages/otsdaq/
+
+  - the build procedure itself:
 
 #+begin_src 
   wget https://github.com/Mu2e/otsdaq_mu2e_config/mu2e_ots_install_v2.sh
