--- a/doc/otsdaq_q_and_a.org
+++ b/doc/otsdaq_q_and_a.org
@@ -1,3 +1,4 @@
+#+startup:fold
 # ------------------------------------------------------------------------------
 # questions marked with *TODO* (in Emacs) are not answered yet                   
 * ------------------------------------------------------------------------------
@@ -7,7 +8,7 @@
   - if needed, make a screenshot, store it in doc/images, and link it to the 
   question
 * ------------------------------------------------------------------------------
-* [1/14] Questions and answers      [TAB expands]                                               
+* [1/15] Questions and answers      [TAB expands]                                               
 ** TODO what makes a group a 'configuration' group ?
 ** DONE what makes a group a 'context' group ?                               
 [Answer]: see [[file:otsdaq_terminology.org::/Context/]]
@@ -65,6 +66,8 @@ what is achieved by passing the same file twice, but under different souce ?
    - what does the ALIAS:Default link do ? - (doesn't seem to do anything)
    - inefficient view: can we have one line per table instead of three ?
    [[file:./images/configure_table_view_001.png]]
+** TODO configuration editor: how to make the whole table, not 10% of it, visible ?
+file:./images/configure_editor.png
 ** TODO why an GroupAliases table gets activated when I click on its version number just to see what it is ?        
 
    - when I browse versions of the GroupAliases table, and click on a particular version, 
