--- a/doc/mu2e_build_instructions.org
+++ b/doc/mu2e_build_instructions.org
@@ -7,8 +7,9 @@
   - all available OTSDAQ bundles: https://scisoft.fnal.gov/scisoft/packages/otsdaq/
 
   - the build procedure itself:
-    1) got to https://github.com/pavel1murat/otsdaq_mu2e_config/blob/main/mu2e_ots_install.sh
-    2) convert to raw (click on "raw" button), wget the resulting raw URL (that will have an odd ending)
+    0) make sure you have access to *otsdaq_mu2e_config* repo - it is a private Mu2e repository. Ask Rob Kutschke for permissions.
+    1) go to https://github.com/mu2e/otsdaq_mu2e_config/blob/pasha/mu2e_ots_install.sh
+    2) convert the page to raw format (click on the "raw" button), wget the resulting raw URL (that will have an odd ending)
 
 #+begin_src 
   wget -O mu2e_ots_install.sh  <raw-URL>      # see example below
@@ -20,7 +21,7 @@
   - otsdaq_bundle: version of the OTSDAQ bundle, see above 
   - qualifiers   : build qualifiers, see above
 
-example:
+An example follows. In the middle of the installation you will be asked for a password to access the *otsdaq_mu2e_config* repo. 
 #+begin_src 
   wget -O mu2e_ots_install.sh https://raw.githubusercontent.com/pavel1murat/otsdaq_mu2e_config/main/mu2e_ots_install.sh?token=GHSAT0AAAAAAB5R6WEE6WSNUG76CU6GX2QIZCTHH6A --
   source mu2e_ots_install.sh pasha_001 8 v2_06_09 e20_s122_prof
