--- a/doc/configure_and_run.org
+++ b/doc/configure_and_run.org
@@ -34,7 +34,7 @@
   a context one and a non-context one, and their aliases
 
   *if an alias is not defined, the current configure display won't show the group!*
-* proposed naming conventions for Mu2e configurations (for now):
+* proposed naming conventions for Mu2e configurations (for now):             
 
 |------------+------------------+-----------------+-----------------------|
 |            | context          | non-context     | comment               |
@@ -59,7 +59,7 @@
  - note, that currently underscores in the group names are not allowed, 
    however they are allowed in the context names
 
-* a workflow proposal           
+* a workflow proposal                                                        
 
 - create a new configuration by copying and renaming an existing one 
 - do it for both the context and non-context tables
@@ -93,10 +93,15 @@ To be a Context group, the members must exactly match the following members:
 
 * _environment variables used_                                               
 
-             USER_DATA=$MRB_TOP/srcs/otsdaq_mu2e_config/Data_tracker
- DAQINTERFACE_SETTINGS=$USER_DATA/ARTDAQConfigurations/daqinterface_setting
+**             USER_DATA=$MRB_TOP/srcs/otsdaq_mu2e_config/Data_tracker
+** DAQINTERFACE_SETTINGS=$USER_DATA/ARTDAQConfigurations/daqinterface_setting
 
   note that ARTDAQConfigurations is a *symlink*
+
+** WEB_PATH=${OTSDAQ_UTILITIES_DIR}/WebGUI                                   
+  - used by xdaq to display web pages
+  - a symlink is created by ots
+** USER_WEB_PATH=$otsdir/srcs/$repository/UserWebGUI : defined in setup_ots.sh
 * where the congiguration data are stored                                    
 
   assume user (partition) = tracker
