--- a/doc/otsdaq_mu2e.org
+++ b/doc/otsdaq_mu2e.org
@@ -47,4 +47,5 @@
 ** [[file:otsdaq_terminology.org][OTSDAQ terminology]]                                                         
 ** [[file:otsdaq_q_and_a.org][OTSDAQ Q&A]]           
 ** [[file:code_repositories.org][code repositories]]                                                         
+** [[file:db_tables.org][Mongo DB and the DB tables]] 
 * ------------------------------------------------------------------------------
