- add help on pymongo

--- a/doc/build_instructions.org
+++ b/doc/build_instructions.org
@@ -1,4 +1,6 @@
-* installation and build instructions  (validated 2023-05-03)                                      
+#+startup:fold
+* ------------------------------------------------------------------------------
+* installation and build instructions  (validated 2023-05-03)                
 
   OTSDAQ bundle to use 
    - version   : v2_06_09   
@@ -42,7 +44,7 @@ mrb b
 export ARTDAQ_DATABASE_URI=XXX   # ask Giani/Pasha for what XXX is 
 ssh -v -f -KX -N -L 27017:localhost:27017 131.225.237.100
 #+end_src
-* ROOT interface to mu2e_pcie_utils                                 
+* ROOT interface to mu2e_pcie_utils                                          
 - If you got here, you already have built the OTS libraries
 - ROOT interface library is not available by default, you have to build it
 #+begin_src
