--- a/doc/build_instructions.org
+++ b/doc/build_instructions.org
@@ -1,10 +1,10 @@
 #+startup:fold
 * ------------------------------------------------------------------------------
-* installation and build instructions  (validated 2023-05-03)                
+* installation and build instructions  validated <2023-07-19 Wed>            
 
   OTSDAQ bundle to use 
-   - version   : v2_06_09   
-   - qualifiers: e20_s122_prof
+  - version   : v2_06_10   
+  - qualifiers: e20_s124_prof
 
   - all available OTSDAQ bundles: https://scisoft.fnal.gov/scisoft/packages/otsdaq/
 
@@ -26,7 +26,7 @@
 An example follows. In the middle of the installation you will be asked for a password to access the *otsdaq_mu2e_config* repo. 
 #+begin_src 
   wget -O mu2e_ots_install.sh https://raw.githubusercontent.com/pavel1murat/otsdaq_mu2e_config/main/mu2e_ots_install.sh?token=GHSAT0AAAAAAB5R6WEE6WSNUG76CU6GX2QIZCTHH6A --
-  source mu2e_ots_install.sh pasha_001 8 v2_06_09 e20_s122_prof
+  source mu2e_ots_install.sh pasha_001 8 v2_06_10 e20_s124_prof
 #+end_src
 
   here 'pasha_001' is the name of created work area
@@ -44,7 +44,7 @@ mrb b
 export ARTDAQ_DATABASE_URI=XXX   # ask Giani/Pasha for what XXX is 
 ssh -v -f -KX -N -L 27017:localhost:27017 131.225.237.100
 #+end_src
-* ROOT interface to mu2e_pcie_utils                                          
+* ROOT interface to mu2e_pcie_utils    validated <2023-07-19 Wed>            
 - If you got here, you already have built the OTS libraries
 - ROOT interface library is not available by default, you have to build it
 #+begin_src
