--- a/doc/hardware.org
+++ b/doc/hardware.org
@@ -60,8 +60,7 @@ sts=0
 | 23-31 | ro   |       0 | reserved                              |
 |-------+------+---------+---------------------------------------|
 *      0x91a8 : CFO emulation heartbeat interval timer preset                
-
-  time interval between two event window markers in units of 25ns
+  - time interval between two event window markers in units of 25ns
 ** example                                                                   
 #+begin_src  
 echo "Enabling EWM with 25.6 us internal"
