--- a/doc/otsdaq_mu2e.org
+++ b/doc/otsdaq_mu2e.org
@@ -6,57 +6,62 @@
 *** <2023-06-29 Thu> v2_06_10 OTS bundle released
 *** <2023-04-12 Wed> [[https://docs.google.com/document/d/1HcwRGdVoRhv8FstQncY7KOxvNlP6nf_gGtHEcNmc2Bc/edit][kick-off meeting, preparations for a workshop]]
 ** -----------------------------------------------------------------------------
-** [[https://otsdaq.fnal.gov/tutorials/first_demo/topics/configuration_primer.html][OTSDAQ primer]]
 ** [[https://docs.google.com/presentation/d/1wzSJMK3fCoW2aZ_sdO1jg0n8WoykJR7MJ1ILqp3kEAI/edit#slide=id.p][OTSDAQ intro by Ryan]]
 ** [[file:build_instructions.org][build instructions]]
+** ARTDAQ                                                                    
+   boardreader, eventbuilder, and datalogger are started by ARTDAQManager 
+   during the *configure* transition. At this point the run number is not defined,
+   so one can't encode the run number into their log file names
+#+begin_src 
+mu2etrk@mu2edaq09:~/test_stand/pasha_018>ps aux | grep boardreader | grep -v grep
+mu2etrk  15634  0.0  0.0 2367172 14144 pts/3   Sl   19:43   0:00 boardreader -c id: 18100 commanderPluginType: xmlrpc rank: 0 application_name: tracker_vst partition_number: 8
+mu2etrk@mu2edaq09:~/test_stand/pasha_018>ps aux | grep eventbuilder | grep -v grep
+mu2etrk  15635  0.0  0.0 17184952 14160 pts/3  Sl   19:43   0:00 eventbuilder -c id: 18101 commanderPluginType: xmlrpc rank: 1 application_name: builder0 partition_number: 8
+mu2etrk@mu2edaq09:~/test_stand/pasha_018>ps aux | grep datalogger | grep -v grep
+mu2etrk  15636  0.0  0.0 16546880 13112 pts/3  Sl   19:43   0:00 datalogger -c id: 18102 commanderPluginType: xmlrpc rank: 2 application_name: logger0 partition_number: 8
+#+end_src 
+
 ** [[file:xdaq.org][XDAQ]]
 ** [[file:hardware.org][Mu2e DAQ hardware]]
 ** [[file:trace.org][TRACE]] 
 ** [[file:configure_and_run.org][how to configure and run OTSDAQ]]
-** Mu2e partitions                                                           
+** [[file:partitions.org][partitions]]                                                           
+** existing DAQ configurations
+- at present, each system configuration combines two groups of OTS tables.
 
-- what is the meaning of ARTDAQ_PARTITION ?
-  - partition specifies a host, a port range, and whatever else needed
-  - assume that different partitions use different subsystem configurations
-  - partition numbers are static 
-- why the subsystem=dqmcalo uses repo=otsdaq_mu2e_trigger ? - probably, because of Giani
-
-|-----------+---------------+---------------+----------------+----------+-------------------------+-------------|
-| PARTITION | subsystem     | configuration |           node | OTS port | repo (used in webpath)  | people      |
-|           |               |               |                |          | to be fixed             |             |
-|-----------+---------------+---------------+----------------+----------+-------------------------+-------------|
-|         2 | sync          |               | 192.168.157.06 |     2015 | otsdaq_mu2e             |             |
-|         3 | dqmcalo       |               | 192.168.157.11 |     3095 | otsdaq_mu2e_trigger     |             |
-|         4 | calo          | cal_vst_sidet |      mu2edaq07 |     3025 | otsdaq_mu2e_calorimeter | Luca        |
-|         5 | stm           |               | 192.168.157.11 |     3035 | otsdaq_mu2e_stm         | Andy, Pawel |
-|         6 | trigger       |               | 192.168.157.14 |     3045 | otsdaq_mu2e_trigger     | Giani       |
-|         7 | hwdev2        |               | 192.168.157.05 |     3055 | otsdaq_mu2e             | Micol       |
-|         8 | tracker       | trk_vst_annex |      mu2edaq09 |     3065 | otsdaq_mu2e_tracker     | Pasha       |
-|         9 | crv           |               | 192.168.157.12 |     3085 | otsdaq_mu2e_crv         | Simon       |
-|        10 | dqm           |               |      mu2edaq09 |     3090 | otsdaq_mu2e_tracker     | Kamal       |
-|        11 | stmdbtest     |               | 192.168.157.11 |     3040 | otsdaq_mu2e_stm         |             |
-|        12 | shift         |               | 192.168.157.12 |     3075 | otsdaq_mu2e             |             |
-|         - | shift1        |               | 192.168.157.12 |     3080 | otsdaq_mu2e             |             |
-|         - | shift2        |               | 192.168.157.12 |     3085 | otsdaq_mu2e             |             |
-|         - | 02            |               |      127.0.0.1 |     2015 | otsdaq_mu2e             |             |
-|         - | tem           |               | 192.168.157.11 |     4045 | otsdaq_mu2e_extmon      |             |
-|         - | dcs           |               |      127.0.0.1 |     5019 | otsdaq_mu2e             |             |
-|        13 | aggregator    |               | 192.168.157.14 |     3040 | otsdaq_mu2e_dqm         |             |
-|        14 | slow controls |               |      mu2edaq09 |     3070 | otsdaq_mu2e_tracker     | Antonio     |
-|-----------+---------------+---------------+----------------+----------+-------------------------+-------------|
-
-- for now, each configuration combines two groups of OTS tables. For example
-
- - trk_vst_annex = TrkVstAnnexConfig + TrkVstAnnexContext
+|---------------------------+-------------------------------+-------------------------------+---------------------------------------|
+| configuration             | context group                 | config group                  | comment                               |
+|---------------------------+-------------------------------+-------------------------------+---------------------------------------|
+| trk_vst_annex             | TrkVstAnnexContext            | TrkVstAnnexConfig             |                                       |
+| trk_vst_annex_v2          | TrkVstAnnexContext            | TrkVstAnnexConfig             | uses different versions of the tables |
+|---------------------------+-------------------------------+-------------------------------+---------------------------------------|
+| trg_hotizontal_slice_test | TrgHorizontalSliceTestContext | TrgHorizontalSliceTestContext | no typos in the config name           |
+|---------------------------+-------------------------------+-------------------------------+---------------------------------------|
+| stm_vst_alcove            | StmVstAlcoveContext           | StmVstAlcoveConfig            |                                       |
+|---------------------------+-------------------------------+-------------------------------+---------------------------------------|
+| dqm_trk                   | DqmTrkContext                 | DqmTrkConfig                  |                                       |
+|---------------------------+-------------------------------+-------------------------------+---------------------------------------|
+| cal_vst_sidet             | CalVstSidetContext            | CalVstDqmConfig               |                                       |
+|---------------------------+-------------------------------+-------------------------------+---------------------------------------|
 
 ** [[file:otsdaq_terminology.org][OTSDAQ terminology]]                                                         
 ** [[file:otsdaq_q_and_a.org][OTSDAQ Q&A]]           
 ** [[file:code_repositories.org][code repositories]]                                                         
-** slow controls      
-  - add DqmGUI application - icon on the desktop                                                       
+** DCS : slow controls (Detector Control System)                             
+  - add DqmGUI application - icon on the desktop                     
+  - configure the port number to be consistent with the XDAQ - why the duplication is needed at all?
   - pull otsdaq_utilities from https://github.com/art-daq/otsdaq_utilities.git
   - the DqmGUI top page is located at build.../otsdaq_utilities/WebGUI/html/DqmGUI.html
 
   - shall we run the slow controls instance 
+  - need otsdaq_epics from development
+
+- ots need to write dbg file in the mu2edcs@mu2e-dsc-01 epics ioc folder 
+- so ask Eric to configure it in otsdaq configuration
+- after that, if dbg flies is writing correctly ots is writing the new PVs and/or new configuration also in the dcs_archiver
 ** [[file:db_tables.org][Mongo DB and the DB tables]] 
+* ------------------------------------------------------------------------------
+* ATTIC
+* ------------------------------------------------------------------------------
+** [[https://otsdaq.fnal.gov/tutorials/first_demo/topics/configuration_primer.html][OTSDAQ primer]]
 * ------------------------------------------------------------------------------
